--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,17 +2,232 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-12 12:13:48 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-12 17:45:32 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@webpage{sitedac902,
-	Title = {http://www.ti.com/lit/ds/symlink/dac902.pdf},
+@manual{e300manual,
+	Author = {Freescale semiconductor},
+	Date-Added = {2015-11-12 16:38:24 +0000},
+	Date-Modified = {2015-11-12 16:40:05 +0000},
+	Title = {e300 Power Architecture Core Family Reference Manual}}
+
+@url{dsxilinx,
+	Date-Added = {2015-11-12 16:05:04 +0000},
+	Date-Modified = {2015-11-12 16:05:16 +0000},
+	Title = {http://www.xilinx.com/products/silicon-devices/fpga/spartan-6/lx.html}}
+
+@misc{axfpga,
+	Author = {Actel Corporation},
+	Date-Added = {2015-11-12 15:55:37 +0000},
+	Date-Modified = {2015-11-12 15:56:37 +0000},
+	Month = {May},
+	Title = {Axcelerator family FPGA},
+	Year = {2005}}
+
+@inproceedings{584227,
+	Author = {Chih-Ching Shih and Lambertson, R. and Hawley, F. and Issaw, F. and McCollum, J. and Hamdy, E. and Sakurai, H. and Yuasa, H. and Honda, H. and Yamaoka, T. and Wada, T. and Chenming Hu},
+	Booktitle = {Reliability Physics Symposium, 1997. 35th Annual Proceedings., IEEE International},
+	Date-Added = {2015-11-12 15:48:54 +0000},
+	Date-Modified = {2015-11-12 15:48:54 +0000},
+	Doi = {10.1109/RELPHY.1997.584227},
+	Keywords = {CMOS integrated circuits;electric breakdown;electric fuses;failure analysis;field programmable gate arrays;integrated circuit modelling;integrated circuit reliability;leakage currents;Si;ambient temperature;amorphous silicon/dielectric antifuse;antifuse resistance;breakdown criteria;high-density field-programmable gate arrays;leakage criteria;metal-to-metal antifuse;modeling;reliability;stress currents;stressing polarity;temperature dependence;thermal model;time-to-breakdown;time-to-fail;triple-level CMOS process;unprogrammed antifuse leakage;Amorphous silicon;Dielectrics;Electric breakdown;Electrical resistance measurement;Temperature dependence;Temperature measurement;Thermal resistance;Thermal stresses;Time measurement;Voltage},
+	Month = {Apr},
+	Pages = {25-33},
+	Title = {Characterization and modeling of a highly reliable metal-to-metal antifuse for high-performance and high-density field-programmable gate arrays},
+	Year = {1997},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/RELPHY.1997.584227}}
+
+@article{231343,
+	Author = {Greene, J. and Hamdy, E. and Beal, S.},
+	Date-Added = {2015-11-12 15:44:45 +0000},
+	Date-Modified = {2015-11-12 15:44:45 +0000},
+	Doi = {10.1109/5.231343},
+	Issn = {0018-9219},
+	Journal = {Proceedings of the IEEE},
+	Keywords = {PLD programming;application specific integrated circuits;circuit layout CAD;integrated circuit testing;logic CAD;logic arrays;logic testing;network routing;40 to 60 MHz;ACT;antifuse FPGAs;design automation;electrically programmable two-terminal device;field programmable gate arrays;logic module;programming;segmented channel routing architecture;testing;Electric resistance;Field programmable gate arrays;Logic arrays;Logic design;Logic devices;Logic programming;Logic testing;Parasitic capacitance;Programmable logic arrays;Routing},
+	Month = {Jul},
+	Number = {7},
+	Pages = {1042-1056},
+	Title = {Antifuse field programmable gate arrays},
+	Volume = {81},
+	Year = {1993},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/5.231343}}
+
+@inproceedings{32929,
+	Author = {Hamdy, E. and McCollum, J. and Chen, S.-O. and Chiang, S. and Eltoukhy, S. and Chang, J. and Speers, T. and Mohsen, A.},
+	Booktitle = {Electron Devices Meeting, 1988. IEDM '88. Technical Digest., International},
+	Date-Added = {2015-11-12 15:43:50 +0000},
+	Date-Modified = {2015-11-12 15:43:50 +0000},
+	Doi = {10.1109/IEDM.1988.32929},
+	Issn = {0163-1918},
+	Keywords = {PROM;integrated logic circuits;integrated memory circuits;logic arrays;1.2 micron;500 ohm;64 kbit;PROM;antifuse resistance;channeled gate arrays;dielectric-based antifuse;logic IC;memory ICs;monolithic IC;programmable low-impedance circuit element;programmable read-only memory;reliability;thermal model;Computer simulation;Dielectrics;Equations;Logic;Power dissipation;Silicon;Stress;Temperature;Thermal conductivity;Voltage},
+	Month = {Dec},
+	Pages = {786-789},
+	Title = {Dielectric based antifuse for logic and memory ICs},
+	Year = {1988},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/IEDM.1988.32929}}
+
+@article{622505,
+	Author = {Pavan, P. and Bez, R. and Olivo, P. and Zanoni, E.},
+	Date-Added = {2015-11-12 15:11:11 +0000},
+	Date-Modified = {2015-11-12 15:11:11 +0000},
+	Doi = {10.1109/5.622505},
+	Issn = {0018-9219},
+	Journal = {Proceedings of the IEEE},
+	Keywords = {EPROM;integrated circuit reliability;integrated memory circuits;memory architecture;reviews;NVM;architectural solutions;cell size reduction;cell structures;charge-injection mechanisms;circuit designs;device structures;flash memory cells;memory technology;nonvolatile memories;processing technologies;review;semiconductor memory;Application software;Economic forecasting;Flash memory;Flash memory cells;Hard disks;Nonvolatile memory;PROM;Power supplies;Random access memory;Semiconductor memory},
+	Month = {Aug},
+	Number = {8},
+	Pages = {1248-1271},
+	Title = {Flash memory cells-an overview},
+	Volume = {85},
+	Year = {1997},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/5.622505}}
+
+@inproceedings{510550,
+	Author = {Lipp, R. and Freeman, R. and Saxe, T.},
+	Booktitle = {Custom Integrated Circuits Conference, 1996., Proceedings of the IEEE 1996},
+	Date-Added = {2015-11-12 15:08:56 +0000},
+	Date-Modified = {2015-11-12 15:09:13 +0000},
+	Doi = {10.1109/CICC.1996.510550},
+	Keywords = {Design optimization;EPROM;Electrons;Field programmable gate arrays;Flash memory;Logic devices;Nonvolatile memory;Random access memory;Switches;Switching circuits},
+	Month = {May},
+	Pages = {239},
+	Title = {A HIGH DENSITY FLASH MEMORY PPGA FAMILY},
+	Year = {1996},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/CICC.1996.510550}}
+
+@misc{actelpro,
+	Author = {Actel Corporation},
+	Date-Added = {2015-11-12 15:02:18 +0000},
+	Date-Modified = {2015-11-12 15:02:48 +0000},
+	Month = {October},
+	Title = {ProASIC3 flash family FPGAs},
+	Year = {2005}}
+
+@misc{cpldxilinx,
+	Author = {Xilinx},
+	Date-Added = {2015-11-12 14:55:01 +0000},
+	Date-Modified = {2015-11-12 14:57:34 +0000},
+	Month = {April},
+	Title = {XC9500 in-system programmable CPLD family DS063(v5.4)},
+	Year = {2006}}
+
+@book{fpgabook,
+	Author = {S. D. Brown, R. Francis, J. Rose, and Z. Vranesic},
+	Date-Added = {2015-11-12 14:53:41 +0000},
+	Date-Modified = {2015-11-12 14:54:20 +0000},
+	Publisher = {Kluwer Academic Publishers},
+	Title = {Field-Programmable Gate Arrays},
+	Year = {1992}}
+
+@article{reconfgate,
+	Author = {W. Carter, K. Duong, R. H. Freeman, H. Hsieh, J. Y. Ja, J. E. Mahoney, L. T. Ngo, and S. L. Size},
+	Date-Added = {2015-11-12 14:32:52 +0000},
+	Date-Modified = {2015-11-12 14:33:36 +0000},
+	Journal = {in Proceedings of the IEEE Custom Integrated Circuits Conference},
+	Pages = {233-235},
+	Title = {A user programmable reconfiguration gate array},
+	Year = {May 1986}}
+
+@book{wahl,
+	Author = {S. E. Wahlstrom},
+	Date-Added = {2015-11-12 14:26:14 +0000},
+	Date-Modified = {2015-11-12 14:28:33 +0000},
+	Publisher = {Electronics},
+	Title = {Programmable logic arrays - cheaper by the millions},
+	Year = {December 1967}}
+
+@misc{birkner1978programmable,
+	Author = {Birkner, J.M. and Chua, H.T.},
+	Date-Added = {2015-11-12 14:06:26 +0000},
+	Date-Modified = {2015-11-12 14:06:26 +0000},
+	Month = nov # {~7},
+	Note = {US Patent 4,124,899},
+	Publisher = {Google Patents},
+	Title = {Programmable array logic circuit},
+	Url = {http://www.google.com/patents/US4124899},
+	Year = {1978},
+	Bdsk-Url-1 = {http://www.google.com/patents/US4124899}}
+
+@article{Minnick:1967:SMR:321386.321387,
+	Acmid = {321387},
+	Address = {New York, NY, USA},
+	Author = {Minnick, Robert C.},
+	Date-Added = {2015-11-12 14:03:23 +0000},
+	Date-Modified = {2015-11-12 14:03:23 +0000},
+	Doi = {10.1145/321386.321387},
+	Issn = {0004-5411},
+	Issue_Date = {April 1967},
+	Journal = {J. ACM},
+	Month = apr,
+	Number = {2},
+	Numpages = {39},
+	Pages = {203--241},
+	Publisher = {ACM},
+	Title = {A Survey of Microcellular Research},
+	Url = {http://doi.acm.org/10.1145/321386.321387},
+	Volume = {14},
+	Year = {1967},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/321386.321387},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/321386.321387}}
+
+@url{sitesbrio,
+	Date-Added = {2015-11-12 13:55:11 +0000},
+	Date-Modified = {2015-11-12 13:55:55 +0000},
+	Keywords = {http://sine.ni.com/nips/cds/view/p/lang/it/nid/210421},
+	Title = {http://sine.ni.com/nips/cds/view/p/lang/it/nid/210421}}
+
+@url{siteads807,
+	Date-Added = {2015-11-12 13:54:44 +0000},
+	Date-Modified = {2015-11-12 13:56:17 +0000},
+	Keywords = {http://www.ti.com/lit/ds/symlink/ads807.pdf},
+	Title = {http://www.ti.com/lit/ds/symlink/ads807.pdf}}
+
+@article{4068926,
+	Author = {Ian Kuon and Rose, J.},
+	Date-Added = {2015-11-12 13:53:00 +0000},
+	Date-Modified = {2015-11-12 13:53:00 +0000},
+	Doi = {10.1109/TCAD.2006.884574},
+	Issn = {0278-0070},
+	Journal = {Computer-Aided Design of Integrated Circuits and Systems, IEEE Transactions on},
+	Keywords = {CMOS logic circuits;application specific integrated circuits;delays;field programmable gate arrays;table lookup;90 nm;CMOS ASIC;CMOS FPGA;application-specific integrated circuits;area gap;block memory;circuit speed;core logic;critical-path delay;delay comparison;field programmable gate array;flip-flops;hard blocks;hard multipliers;logic density;look-up table-based logic;power comparison;power consumption;Application specific integrated circuits;Area measurement;CMOS logic circuits;Density measurement;Energy consumption;Field programmable gate arrays;Integrated circuit measurements;Power measurement;Programmable logic arrays;Velocity measurement;Application-specific integrated circuits (ASIC);area comparison;delay comparison;field programmable gate array (FPGA);power comparison},
+	Month = {Feb},
+	Number = {2},
+	Pages = {203-215},
+	Title = {Measuring the Gap Between FPGAs and ASICs},
+	Volume = {26},
+	Year = {2007},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/TCAD.2006.884574}}
+
+@article{Kuon:2008:FAS:1454695.1454696,
+	Acmid = {1454696},
+	Address = {Hanover, MA, USA},
+	Author = {Kuon, Ian and Tessier, Russell and Rose, Jonathan},
+	Date-Added = {2015-11-12 13:48:20 +0000},
+	Date-Modified = {2015-11-12 13:48:20 +0000},
+	Doi = {10.1561/1000000005},
+	Issn = {1551-3939},
+	Issue_Date = {February 2008},
+	Journal = {Found. Trends Electron. Des. Autom.},
+	Month = feb,
+	Number = {2},
+	Numpages = {119},
+	Pages = {135--253},
+	Publisher = {Now Publishers Inc.},
+	Title = {FPGA Architecture: Survey and Challenges},
+	Url = {http://dx.doi.org/10.1561/1000000005},
+	Volume = {2},
+	Year = {2008},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1561/1000000005}}
+
+@url{sitedac902,
 	Date-Added = {2015-11-12 11:11:22 +0000},
-	Date-Modified = {2015-11-12 11:11:34 +0000},
+	Date-Modified = {2015-11-12 13:54:40 +0000},
+	Title = {http://www.ti.com/lit/ds/symlink/dac902.pdf},
 	Url = {http://www.ti.com/lit/ds/symlink/dac902.pdf}}
 
 @mastersthesis{thesissmldis,
